@@ -13,9 +13,7 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.json.JsonMapper;
 import org.junit.jupiter.api.Test;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.function.Function;
 import java.util.function.Supplier;
 
@@ -32,7 +30,7 @@ public class SampleAgentFunctions {
             .buildAgentsClient();
 
         Supplier<String> getUserFavoriteCity = () -> "Seattle, WA";
-        var getUserFavoriteCityTool = new FunctionToolDefinition(
+        FunctionToolDefinition getUserFavoriteCityTool = new FunctionToolDefinition(
             new FunctionDefinition(
                 "getUserFavoriteCity",
                 BinaryData.fromObject(
@@ -44,15 +42,15 @@ public class SampleAgentFunctions {
             return "The Emerald City";
         };
 
-        var getCityNicknameTool = new FunctionToolDefinition(
+        FunctionToolDefinition getCityNicknameTool = new FunctionToolDefinition(
             new FunctionDefinition(
                 "getCityNickname",
                 BinaryData.fromObject(
-                    Map.of(
+                    mapOf(
                         "type", "object",
-                        "properties", Map.of(
+                        "properties", mapOf(
                             "location",
-                            Map.of(
+                            mapOf(
                                 "type", "string",
                                 "description", "The city and state, e.g. San Francisco, CA")
                         ),
@@ -62,7 +60,7 @@ public class SampleAgentFunctions {
 
         Function<RequiredToolCall, ToolOutput> getResolvedToolOutput = toolCall -> {
             if (toolCall instanceof RequiredFunctionToolCall) {
-                var functionToolCall = (RequiredFunctionToolCall)toolCall;
+                RequiredFunctionToolCall functionToolCall = (RequiredFunctionToolCall)toolCall;
                 String functionName = functionToolCall.getFunction().getName();
                 if (functionName.equals("getUserFavoriteCity"))
                     return new ToolOutput().setToolCallId(functionToolCall.getId())
@@ -82,25 +80,25 @@ public class SampleAgentFunctions {
             return null;
         };
 
-        var agentName = "functions_example";
-        var createAgentOptions = new CreateAgentOptions("gpt-4o-mini")
+        String agentName = "functions_example";
+        CreateAgentOptions createAgentOptions = new CreateAgentOptions("gpt-4o-mini")
             .setName(agentName)
             .setInstructions("You are a weather bot. Use the provided functions to help answer questions. "
                 + "Customize your responses to the user's preferences as much as possible and use friendly "
                 + "nicknames for cities whenever possible.")
-            .setTools(List.of(getUserFavoriteCityTool, getCityNicknameTool));
+            .setTools(Arrays.asList(getUserFavoriteCityTool, getCityNicknameTool));
         Agent agent = agentsClient.createAgent(createAgentOptions);
 
-        var thread = agentsClient.createThread();
-        var createdMessage = agentsClient.createMessage(
+        AgentThread thread = agentsClient.createThread();
+        ThreadMessage createdMessage = agentsClient.createMessage(
             thread.getId(),
             MessageRole.USER,
             "What's the nickname of my favorite city?");
 
         //run agent
-        var createRunOptions = new CreateRunOptions(thread.getId(), agent.getId())
+        CreateRunOptions createRunOptions = new CreateRunOptions(thread.getId(), agent.getId())
             .setAdditionalInstructions("");
-        var threadRun = agentsClient.createRun(createRunOptions);
+        ThreadRun threadRun = agentsClient.createRun(createRunOptions);
 
         try {
             do {
@@ -108,8 +106,8 @@ public class SampleAgentFunctions {
                 threadRun = agentsClient.getRun(thread.getId(), threadRun.getId());
                 if (threadRun.getStatus() == RunStatus.REQUIRES_ACTION
                     && threadRun.getRequiredAction() instanceof SubmitToolOutputsAction) {
-                    var submitToolsOutputAction = (SubmitToolOutputsAction)(threadRun.getRequiredAction());
-                    var toolOutputs = new ArrayList<ToolOutput>();
+                    SubmitToolOutputsAction submitToolsOutputAction = (SubmitToolOutputsAction)(threadRun.getRequiredAction());
+                    ArrayList<ToolOutput> toolOutputs = new ArrayList<ToolOutput>();
                     for (RequiredToolCall toolCall : submitToolsOutputAction.getSubmitToolOutputs().getToolCalls()) {
                         toolOutputs.add(getResolvedToolOutput.apply(toolCall));
                     }
@@ -125,7 +123,7 @@ public class SampleAgentFunctions {
                 System.out.println(threadRun.getLastError().getMessage());
             }
 
-            var runMessages = agentsClient.listMessages(thread.getId());
+            OpenAIPageableListOfThreadMessage runMessages = agentsClient.listMessages(thread.getId());
             for (ThreadMessage message : runMessages.getData())
             {
                 System.out.print(String.format("%1$s - %2$s : ", message.getCreatedAt(), message.getRole()));
@@ -151,5 +149,17 @@ public class SampleAgentFunctions {
             agentsClient.deleteThread(thread.getId());
             agentsClient.deleteAgent(agent.getId());
         }
+    }
+
+    // Use "Map.of" if available
+    @SuppressWarnings("unchecked")
+    private static <T> Map<String, T> mapOf(Object... inputs) {
+        Map<String, T> map = new HashMap<>();
+        for (int i = 0; i < inputs.length; i += 2) {
+            String key = (String) inputs[i];
+            T value = (T) inputs[i + 1];
+            map.put(key, value);
+        }
+        return map;
     }
 }
